create github pages

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
         </div>
         <div class="mbr-pt-4">
             <p class="mbr-text align-center mbr-fonts-style mbr-white display-7"><strong>APRENDA EM VIDEO AULAS &nbsp;O PASSO A PASSO PARA MONTAR SEU PRÓPRIO NEGÓCIO DE BOLO NO POTE TRABALHANDO NO CONFORTO DA SUA CASA!
-</strong><br><strong>CURSO IDEAL PARA VOCÊ QUE ESTÁ DESEMPREGADA OU BUSCA UMA RENDA EXTRA PARA AJUDAR NAS DESPESAS DE CASA.</strong><br><br><em>APROVEITE O SUPER DESCONTO DE R$127</em> <strong>POR APENAS R$57</strong><em> EM ATÉ 5X NO CARTÃO</em>&nbsp;<br><br><strong>E AINDA GANHE MAIS 4 E-BOOK DE BRINDES!!!</strong><br><br><strong>OFERTA POR TEMPO LIMITADO!&nbsp;</strong><br><strong><br></strong></p>
+</strong><br><strong>CURSO IDEAL PARA VOCÊ QUE ESTÁ DESEMPREGADA OU BUSCA UMA RENDA EXTRA PARA AJUDAR NAS DESPESAS DE CASA.</strong><br><br><em>APROVEITE O SUPER DESCONTO DE R$97&nbsp;</em><strong>POR APENAS R$57</strong><em> EM ATÉ 6X NO CARTÃO</em>&nbsp;<br><br><strong>E AINDA GANHE MAIS 4 E-BOOK DE BRINDES!!!</strong><br><br><strong>OFERTA POR TEMPO LIMITADO!&nbsp;</strong><br><strong><br></strong></p>
             <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-4" href="https://go.hotmart.com/C34217178Y?ap=dc89">Saiba Mais</a></div>
         </div>
     </div>
@@ -122,5 +122,5 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
 
   
   
-<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section></body>
+<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section></body>
 </html>
